fix(PoweredBy): add missing margin between text and Algolia logo (algolia/instantsearch-specs#127)

--- a/packages/instantsearch-specs/src/styles/themes/reset.scss
+++ b/packages/instantsearch-specs/src/styles/themes/reset.scss
@@ -92,6 +92,10 @@
   width: auto;
 }
 
+.ais-PoweredBy-text {
+  margin-right: 0.3rem;
+}
+
 .ais-RatingMenu-starIcon {
   display: block;
   width: 20px;
